Made nav fixed. Moved header down to not be hidding behind the nav

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -8,8 +8,11 @@ header {
     background-color: #c2e4ed;
     background-image: url("https://www.transparenttextures.com/patterns/cardboard.png");
     color: #fff;
+    margin-top: 120px;
 }
-
+body header {
+    margin-top: 120px;
+}
 header div img {
 }
 
