--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,7 +7,7 @@ nav {
     height: 120px;
     background-color: #4056a1;
     padding: 0px 1.5em;
-    position: absolute;
+    position: fixed;
     top: 0;
 }
 
